HelloUltraviolet/Fixtures/RejectedSource/Procedures/VerificationFactNoRuntimeRepresentation/Source/Main.uv
//! Rejected procedure specimen for exposing verification facts as returned values.

public procedure cannotReturnVerificationFact(value: i32) -> VerificationFact {
    return value
}
